# LLEssentials

./: .all-contributorsrc  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CMakeSettings.json  LINK.txt  LiteLoaderMOD.sln  README.md  README_zh-cn.md  RELEASE_NOTES.md  update.json
.github/workflows/: build-cmake.yml  build-msbuild.yml  build.yml
AntiToolbox/: AntiToolbox.cpp  AntiToolbox.vcxproj  AntiToolbox.vcxproj.filters  Logger1.h  base64.cpp  base64.h  dllmain.cpp  pch.h
CoResourcePack/: .gitignore  CoResourcePack.vcxproj  CoResourcePack.vcxproj.filters  Plugin.cpp  dllmain.cpp
FakeSeed/: FakeSeed.vcxproj  Plugin.cpp  pch.h
Header/: JsonLoader.h  LoggerAPI.h  TranslationAPI.h
Header/Dedicated/: Core.h  JsonLoader.h  LRUMap.h
Header/MC/: Actor.hpp  CommandSelector.hpp  Types.hpp
Header/Utils/: Bstream.h
Header/commandold/: Command.h  CommandReg.h  regCommandHelper.h
LLHelper/: AutoUprade.cpp  BDS.cpp  BDS.h  BDS.hpp  CMakeLists.txt  Command.cpp  GlobalVar.h  Helper.cpp  Helper.h  LLHelper.vcxproj  LLHelper.vcxproj.filters  Logger.cpp  Logger.h  Logger1.h  Protect.cpp  Settings.cpp  command.cpp  dllmain.cpp  lang.h  log.cpp  pch.h  settings.cpp  settings.h  tick_schedule.cpp  tickdo.h
LLMoney/: CMakeLists.txt  Event.cpp  Event.h  LLMoney.cpp  LLMoney.h  LLMoney.vcxproj  LLMoney.vcxproj.filters  Money.h  api.cpp  compatibility.cpp  dllmain.cpp  lang.h  pch.h
LLtpa/: AutoUpgrade.cpp  CMakeLists.txt  GlobalVar.h  LLtpa.vcxproj  LLtpa.vcxproj.filters  TPA.cpp  Teleport.cpp  Tpa.h  dllmain.cpp  homeStorage.cpp  homeStorage.h  lang.h  pch.h  settings.cpp  settings.h
Lib/: LiteLoader.Lua.lib  LiteLoader.lib  SymDBHelper.lib
NoLongerSupport/LLHelper/: Helper.cpp  LLHelper.vcxproj.filters  Logger1.h  commad.h
NoLongerSupport/LLtpa/: LLtpa.vcxproj.filters  TPA.cpp  dllmain.cpp  landapi.cpp
SDK/Header/: EventAPI.h  GlobalServiceAPI.h  LLMoney.h
SDK/Header/MC/: ActorCommandOrigin.hpp  ActorServerCommandOrigin.hpp  AnvilInputContainerValidation.hpp  AnvilMaterialContainerValidation.hpp  ArmorContainerValidation.hpp  AutomationPlayerCommandOrigin.hpp  AvailableActorIdentifiersPacket.hpp  BannerBlockActor.hpp  BarrelContainerValidation.hpp  BastionPiece.hpp  BeehiveBlockActor.hpp  BehaviorNode.hpp  BellBlockActor.hpp  BiomeDefinitionListPacket.hpp  BlockActor.hpp  BlockActorDataPacket.hpp  BlockCommandOrigin.hpp  BonusChestFeature.hpp  BrewingStandFuelContainerValidation.hpp  BrewingStandInputContainerValidation.hpp  BrewingStandResultContainerValidation.hpp  CampfireBlockActor.hpp  CartographyAdditionalContainerValidation.hpp  CartographyInputContainerValidation.hpp  ChalkboardBlockActor.hpp  ChunkRadiusUpdatedPacket.hpp  ClientAutomationCommandOrigin.hpp  CombinedHotbarAndInventoryContainerValidation.hpp  CommandBlockActor.hpp  ComparatorBlockActor.hpp  CompoundCreatorInputValidation.hpp  DataItem.hpp  (+84 more)
SDK/Lib/: LiteLoader.Js.lib  LiteLoader.lib  SymDBHelper.lib
ServerSettings/: ServerSettings.vcxproj  ServerSettings.vcxproj.filters  dllmain.cpp  pch.h
Transfer/: Transfer.vcxproj  dllmain.cpp  pch.h
config/: LLHelper.json
headers/: Chakra.lib  LLMoney.h  LLland.h  LiteLoader.lib  LiteLuaLoader.h  LoaderApi.h  Plugins.h  lbpch.h  liteloader.h  luafly.h
headers/api/: myPacket.h
headers/loader/: Loader.h
headers/mc/: Command.h  Core.h  Item.h  OffsetHelper.h  Player.h  mass.h
headers/stl/: langPack.h
lib/: Chakra.lib  LLMoney.lib  LLland.lib  LiteLoader.lib  LiteLuaLoader.lib  lua.lib
plugins/LLHelper/: LLHelper.json
plugins/LLMoney/: money.json
plugins/LLtpa/: tpa.json
(+9 files in other folders)
